--- a/BliFunc/BliFunc.csproj
+++ b/BliFunc/BliFunc.csproj
@@ -7,6 +7,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
   <ItemGroup>
+    <None Remove="Library\AiResources\Prompties\CommunityToolkit.prompty" />
+  </ItemGroup>
+  <ItemGroup>
     <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.41.0" />
     <PackageReference Include="Microsoft.Azure.Functions.Worker" Version="1.20.0" />
     <PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.Http" Version="3.1.0" />
@@ -27,5 +30,11 @@
   </ItemGroup>
   <ItemGroup>
     <Using Include="System.Threading.ExecutionContext" Alias="ExecutionContext" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Library\AiResources\Plugins\" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Library\AiResources\Prompties\CommunityToolkit.prompty" />
   </ItemGroup>
 </Project>
