--- a/BliFunc/BliFunc.csproj
+++ b/BliFunc/BliFunc.csproj
@@ -8,15 +8,17 @@
   </PropertyGroup>
   <ItemGroup>
     <None Remove="Library\AiResources\Prompties\CommunityToolkit.prompty" />
+    <None Remove="Library\AiResources\Prompties\ExamplePrompt.prompty" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.41.0" />
     <PackageReference Include="Microsoft.Azure.Functions.Worker" Version="1.20.0" />
     <PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.Http" Version="3.1.0" />
     <PackageReference Include="Microsoft.Azure.Functions.Worker.Sdk" Version="1.16.2" />
-    <PackageReference Include="Microsoft.ApplicationInsights.WorkerService" Version="2.21.0" />
+    <PackageReference Include="Microsoft.ApplicationInsights.WorkerService" Version="2.22.0" />
     <PackageReference Include="Microsoft.Azure.Functions.Worker.ApplicationInsights" Version="1.0.0" />
-    <PackageReference Include="Microsoft.SemanticKernel" Version="1.15.0" />
+    <PackageReference Include="Microsoft.SemanticKernel" Version="1.16.1" />
+    <PackageReference Include="Microsoft.SemanticKernel.Prompty" Version="1.16.1-alpha" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
   <ItemGroup>
@@ -33,8 +35,10 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Library\AiResources\Plugins\" />
+    <Folder Include="Library\Enums\" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Library\AiResources\Prompties\ExamplePrompt.prompty" />
     <EmbeddedResource Include="Library\AiResources\Prompties\CommunityToolkit.prompty" />
   </ItemGroup>
 </Project>
