--- a/BliFunc/BliFunc.csproj
+++ b/BliFunc/BliFunc.csproj
@@ -10,6 +10,7 @@
     <None Remove="Library\AiResources\Prompties\CommunityToolkit.prompty" />
     <None Remove="Library\AiResources\Prompties\ContextPrompt.prompty" />
     <None Remove="Library\AiResources\Prompties\ContextPromptJson.prompty" />
+    <None Remove="Library\AiResources\Prompties\Donpen.prompty" />
     <None Remove="Library\AiResources\Prompties\ExamplePrompt.prompty" />
   </ItemGroup>
   <ItemGroup>
@@ -41,6 +42,7 @@
   <ItemGroup>
     <EmbeddedResource Include="Library\AiResources\Prompties\ContextPromptJson.prompty" />
     <EmbeddedResource Include="Library\AiResources\Prompties\ContextPrompt.prompty" />
+    <EmbeddedResource Include="Library\AiResources\Prompties\Donpen.prompty" />
     <EmbeddedResource Include="Library\AiResources\Prompties\ExamplePrompt.prompty" />
     <EmbeddedResource Include="Library\AiResources\Prompties\CommunityToolkit.prompty" />
   </ItemGroup>
