--- a/BliFunc/BliFunc.csproj
+++ b/BliFunc/BliFunc.csproj
@@ -11,6 +11,7 @@
     <None Remove="Library\AiResources\Prompties\ContextPrompt.prompty" />
     <None Remove="Library\AiResources\Prompties\ContextPromptJson.prompty" />
     <None Remove="Library\AiResources\Prompties\Donpen.prompty" />
+    <None Remove="Library\AiResources\Prompties\Donpen_bk.prompty" />
     <None Remove="Library\AiResources\Prompties\ExamplePrompt.prompty" />
   </ItemGroup>
   <ItemGroup>
@@ -42,6 +43,7 @@
   <ItemGroup>
     <EmbeddedResource Include="Library\AiResources\Prompties\ContextPromptJson.prompty" />
     <EmbeddedResource Include="Library\AiResources\Prompties\ContextPrompt.prompty" />
+    <EmbeddedResource Include="Library\AiResources\Prompties\Donpen_bk.prompty" />
     <EmbeddedResource Include="Library\AiResources\Prompties\Donpen.prompty" />
     <EmbeddedResource Include="Library\AiResources\Prompties\ExamplePrompt.prompty" />
     <EmbeddedResource Include="Library\AiResources\Prompties\CommunityToolkit.prompty" />
